--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ requests>=2.31.0
 python-dotenv>=1.0.0
 pytest>=7.0.0
 pytest-cov>=4.0.0
-mypy>=1.0.0 
+mypy>=1.0.0
+beautifulsoup4>=4.12.0
+html2text>=2020.1.16 
